--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -49,4 +49,4 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle # 실제 application build(-x 옵션을 통해 test는 제외)
-        run: ./gradlew build
+        run: ./gradlew build -x test
