--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.12'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-	id "io.sentry.jvm.gradle" version "3.11.0"
 }
 
 group = 'com.pophory'
@@ -38,7 +37,6 @@ dependencies {
 
 	// sentry
 	implementation 'io.sentry:sentry-spring-boot-starter:6.23.0'
-	implementation 'io.sentry:sentry-logback:6.23.0'
 
 	// Database
 	runtimeOnly 'com.h2database:h2'
@@ -46,8 +44,7 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 
 	// AWS S3
-	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.6.RELEASE'
-
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
