[feat #4] 소셜로그인 API 구현  (#34)
* [feat #4] OAuth2 의존성 추가

* [feat #4] Member Entity에 updateRefreshToken 추가 및 Builder 패턴 추가

* [fix #4] MemberService private로 변경

* [feat #4] 소셜로그인에 사용되는 추상 클래스 구현

* [feat #4] SocialService를 상속받는 KakaoService 구현

* [feat #4] socialType과 socialId로 Member를 검색하는 메소드 추가

* [feat #4] AuthController에 login 추가

* [feat #4] CustomJwtAuthenticationEntryPoint 추가

* [feat #4] 필요한 요청만 security를 거칠 수 있도록 수정

* [feat #4] 소셜로그인 구현

* [feat #4] 의존성 추가

* [feat #4] @ApiResponse에 content 추가

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,10 @@ dependencies {
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+	implementation 'com.google.code.gson:gson:2.10.1'
+
+	// OAuth2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 tasks.named('test') {
