--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,11 +33,14 @@ jobs:
           
           # application.yml 파일 생성
           touch ./application.yml
-          touch ./application-aws.yml
+          touch ./application-infra.yml]
+          touch ./pophory_fcm.json
           
           # GitHub-Actions 에서 설정한 값을 application.yml 파일에 쓰기
           echo "${{ secrets.APPLICATION }}" >> ./application.yml
           echo "${{ secrets.APPLICATION_INFRA }}" >> ./application-infra.yml
+          echo "${{ secrets.FCM_JSON }}" >> ./popory_fcm.json
+          
           
           # application.yml 파일 확인
           cat ./application.yml
