--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -16,18 +16,15 @@ jobs:
 
     steps:
 
-      # 1) 워크플로우 실행 전 기본적으로 체크아웃 필요
       - name: checkout
         uses: actions/checkout@v3
 
-      # 2) JDK 11버전 설치, 다른 JDK 버전을 사용하다면 수정
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'corretto'
 
-      # 3) 환경변수 파일 생성
       - name: application.yml
         run: |
           ## create application.yml
@@ -36,17 +33,21 @@ jobs:
           
           # application.yml 파일 생성
           touch ./application.yml
+          touch ./application-infra.yml]
+          touch ./pophory_fcm.json
           
           # GitHub-Actions 에서 설정한 값을 application.yml 파일에 쓰기
-          echo "${{ secrets.APPLICATION_PROD }}" >> ./application.yml
+          echo "${{ secrets.APPLICATION }}" >> ./application.yml
+          echo "${{ secrets.APPLICATION_INFRA }}" >> ./application-infra.yml
+          echo "${{ secrets.FCM_JSON }}" >> ./popory_fcm.json
+          
           
           # application.yml 파일 확인
           cat ./application.yml
         shell: bash
 
-      # 이 워크플로우는 gradle build
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle # 실제 application build(-x 옵션을 통해 test는 제외)
+      - name: Build with Gradle
         run: ./gradlew build -x test
