--- a/.github/workflows/ci-prod.yml
+++ b/.github/workflows/ci-prod.yml
@@ -28,7 +28,7 @@ jobs:
       - name: application.yml
         run: |
           ## create application.yml
-          cd ./src/main/resources
+          cd ./pophory-api/src/main/resources
           
           # application.yml 파일 생성
           touch ./application.yml
