[chore #188] application-local.yaml 생성

--- a/pophory-common/build.gradle
+++ b/pophory-common/build.gradle
@@ -3,4 +3,8 @@ jar.enabled = true
 
 dependencies {
     implementation(project(':pophory-external'))
+
+    // sentry
+    implementation 'io.sentry:sentry-spring-boot-starter:6.23.0'
+
 }
