--- a/pophory-api/build.gradle
+++ b/pophory-api/build.gradle
@@ -4,4 +4,25 @@ dependencies {
     implementation project(':pophory-common')
     implementation project(':pophory-domain')
     implementation project(':pophory-external')
+
+    // Spring boot
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // JWT
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    // swagger
+    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+
+    // AWS S3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+    // Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
