--- a/pophory-external/build.gradle
+++ b/pophory-external/build.gradle
@@ -4,4 +4,11 @@ jar.enabled = true
 dependencies {
     // slack
     implementation("com.slack.api:slack-api-client:1.31.0")
+
+    // FCM
+    implementation 'com.google.firebase:firebase-admin:9.1.1'
+
+    // AWS S3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
 }
