--- a/pophory-api/src/main/resources/application-dev.yaml
+++ b/pophory-api/src/main/resources/application-dev.yaml
@@ -51,3 +51,17 @@ cloud:
       bucket: ${S3_BUCKET}
 pophorysm:
   id: ${POPHORYSM_ID}
+
+springdoc:
+  packages-to-scan: com.pophory.pophoryapi
+  default-consumes-media-type: application/json;charset=UTF-8
+  default-produces-media-type: application/json;charset=UTF-8
+  swagger-ui:
+    tags-sorter: alpah
+    operations-sorter: alpha
+  api-docs:
+    path: /api-docs/json
+    groups:
+      enabled: true
+    cache:
+      disabled: true
