[chore] swagger 관련 설정 업데이트

--- a/pophory-common/build.gradle
+++ b/pophory-common/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     // swagger
-    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0"
+    implementation "org.springdoc:springdoc-openapi-starter-common:2.3.0"
 
 }
