--- a/pophory-api/build.gradle
+++ b/pophory-api/build.gradle
@@ -5,6 +5,8 @@ dependencies {
     implementation project(':pophory-domain')
     implementation project(':pophory-external')
 
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0"
+
     // Spring boot
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
