--- a/pophory-api/src/main/resources/application-dev.yaml
+++ b/pophory-api/src/main/resources/application-dev.yaml
@@ -5,7 +5,7 @@ spring:
     import: secret.properties
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DEV_DB_ENDPOINT}:3306/${DEV_DB_NAME}?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://${DEV_DB_ENDPOINT}:3306/${DEV_DB_NAME}?serverTimezone=KST
     username: ${DEV_DB_USER}
     password: ${DEV_DB_PASSWORD}
   jpa:
@@ -54,14 +54,6 @@ pophorysm:
 
 springdoc:
   packages-to-scan: com.pophory.pophoryapi
-  default-consumes-media-type: application/json;charset=UTF-8
-  default-produces-media-type: application/json;charset=UTF-8
-  swagger-ui:
-    tags-sorter: alpah
-    operations-sorter: alpha
   api-docs:
-    path: /api-docs/json
-    groups:
-      enabled: true
-    cache:
-      disabled: true
+    enabled: true
+  use-fqn: true
