[setting] swagger 관련 의존성 업데이트

--- a/pophory-common/build.gradle
+++ b/pophory-common/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
-    // swagger
+    // swagger"
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0"
     implementation "org.springdoc:springdoc-openapi-starter-common:2.3.0"
 
