--- a/pophory-api/build.gradle
+++ b/pophory-api/build.gradle
@@ -5,7 +5,9 @@ dependencies {
     implementation project(':pophory-domain')
     implementation project(':pophory-external')
 
+    // swagger"
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0"
+    implementation "org.springdoc:springdoc-openapi-starter-common:2.3.0"
 
     // Spring boot
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -18,8 +20,6 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    // swagger
-    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 
     // AWS S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
