[chore] token 만료시간 설정 변경

--- a/pophory-api/src/main/resources/application-prod.yaml
+++ b/pophory-api/src/main/resources/application-prod.yaml
@@ -20,6 +20,10 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET}
+  access-token:
+    expiration-time: 7200000
+  refresh-token:
+    expiration-time: 1209600000
 
 sentry:
   dsn: ${SENTRY_DSN}
