--- a/pophory-api/src/main/resources/application-dev.yaml
+++ b/pophory-api/src/main/resources/application-dev.yaml
@@ -17,6 +17,10 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET}
+  access-token:
+    expiration-time: 1200000
+  refresh-token:
+    expiration-time: 1209600000
 
 sentry:
   dsn: ${SENTRY_DSN}
