--- a/pophory-api/src/main/resources/application-local.yaml
+++ b/pophory-api/src/main/resources/application-local.yaml
@@ -17,6 +17,10 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET}
+  access-token:
+    expiration-time: 7200000
+  refresh-token:
+    expiration-time: 1209600000
 
 jwt.APPLE_URL: ${APPLE_URL}
 jwt.KAKAO_URL: ${KAKAO_URL}
