--- a/.github/workflows/cd-prod.yml
+++ b/.github/workflows/cd-prod.yml
@@ -2,7 +2,7 @@ name: pophory prod cd
 
 on:
   push:
-    branches: [ main ] # main branch로 push 될 때 실행됩니다.
+    branches: [  ] # main branch로 push 될 때 실행됩니다.
 
 env:
   S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
